tests/snapshots/examples_fixtures/io__aoc_day3_haskell_style.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day3_haskell_style.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `best_with_digit`.

  --> examples/io/aoc_day3_haskell_style.flx:22:5
   |
22 |     best_with_digit(line, start_idx, k, 9)
   |     ^^^^^^^^^^^^^^^

Hint:
  Define it first: let best_with_digit = ...;


--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `try_occurrences`.

  --> examples/io/aoc_day3_haskell_style.flx:32:11
   |
32 |     match try_occurrences(line, digit_str, first_pos, k) {
   |           ^^^^^^^^^^^^^^^

Hint:
  Define it first: let try_occurrences = ...;


--> compiler error[E400]: MISSING EFFECT

Call to `read_lines` requires effect `IO` in this function signature.

  --> examples/io/aoc_day3_haskell_style.flx:78:30
   |
78 |     match sum_values(to_list(read_lines(path)), n, 0) {
   |                              ^^^^^^^^^^
   |                              ---------- effectful call occurs here

Hint:
  Add `with IO` to the enclosing function.

Found 3 errors.
== stdout ==
<not executed>
